# ignition-db

./: CMakeLists.txt  INSTALL.md  Makefile.am  Makefile.in  README.md  configure  configure.ac  ignition-db.pc.in  ignition.pc.in
autom4te.cache/: output.1  output.2  traces.0  traces.2
src/: Makefile.am  Makefile.in  config.h  config.h.in  ipc.c  ipc.h  main.c  main.h  socket.c  socket.h
src/cmd/: cmdline.c  cmdline.h  opt.ggo
src/format/: sup.c  sup.h
src/render/: gfxenv.c  gfxenv.h
src/shader/: beauty.frag  beauty.vert  main.frag  main.vert
src/world/: env.c  env.h
